[gd_scene load_steps=33 format=3 uid="uid://bjomhwnveh4g5"]

[ext_resource type="Script" path="res://scenes/zombie/zombie.gd" id="1_m2ppv"]
[ext_resource type="AudioStream" uid="uid://c3w1dkbvnbyv6" path="res://sound/sounds/zombie_die.mp3" id="3_kb6wl"]
[ext_resource type="Shader" path="res://scenes/zombie/zombie.gdshader" id="3_kr8u6"]
[ext_resource type="Texture2D" uid="uid://bv5diuw3mu4wy" path="res://scenes/zombie/zombie_walk-Sheet.png" id="3_lqe4v"]
[ext_resource type="Texture2D" uid="uid://dcybovww3bnrw" path="res://scenes/zombie/zombie_die-Sheet.png" id="4_egqm8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yru3w"]
radius = 46.0109

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjixw"]
radius = 13.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fdjp6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_piy17"]
shader = ExtResource("3_kr8u6")
shader_parameter/target_color = null
shader_parameter/new_color = null

[sub_resource type="AtlasTexture" id="AtlasTexture_qao3w"]
atlas = ExtResource("4_egqm8")
region = Rect2(0, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpu55"]
atlas = ExtResource("4_egqm8")
region = Rect2(56, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2tep"]
atlas = ExtResource("4_egqm8")
region = Rect2(112, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50qft"]
atlas = ExtResource("4_egqm8")
region = Rect2(168, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlmes"]
atlas = ExtResource("4_egqm8")
region = Rect2(224, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hypjg"]
atlas = ExtResource("4_egqm8")
region = Rect2(280, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp2a7"]
atlas = ExtResource("4_egqm8")
region = Rect2(336, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxvl"]
atlas = ExtResource("4_egqm8")
region = Rect2(392, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tjty"]
atlas = ExtResource("4_egqm8")
region = Rect2(448, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aotw3"]
atlas = ExtResource("4_egqm8")
region = Rect2(504, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aalm1"]
atlas = ExtResource("4_egqm8")
region = Rect2(560, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwf2w"]
atlas = ExtResource("4_egqm8")
region = Rect2(616, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n71u7"]
atlas = ExtResource("4_egqm8")
region = Rect2(672, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgx3j"]
atlas = ExtResource("4_egqm8")
region = Rect2(728, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3saw"]
atlas = ExtResource("4_egqm8")
region = Rect2(784, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxd50"]
atlas = ExtResource("4_egqm8")
region = Rect2(840, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_geodi"]
atlas = ExtResource("4_egqm8")
region = Rect2(896, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_krgwe"]
atlas = ExtResource("4_egqm8")
region = Rect2(952, 0, 56, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi03r"]
atlas = ExtResource("3_lqe4v")
region = Rect2(0, 0, 23, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pnas"]
atlas = ExtResource("3_lqe4v")
region = Rect2(23, 0, 23, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwujp"]
atlas = ExtResource("3_lqe4v")
region = Rect2(46, 0, 23, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch5i5"]
atlas = ExtResource("3_lqe4v")
region = Rect2(69, 0, 23, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_71a48"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qao3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpu55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2tep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50qft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlmes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hypjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp2a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekxvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tjty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aotw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aalm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwf2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n71u7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgx3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3saw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxd50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_geodi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krgwe")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi03r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pnas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch5i5")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[node name="zombie" type="CharacterBody2D" groups=["zombie"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_m2ppv")
health = 10

[node name="FindPlayerLayer" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindPlayerLayer"]
shape = SubResource("CircleShape2D_yru3w")
debug_color = Color(0.953406, 1.92523e-07, 0.553728, 0.42)

[node name="DamageLayer" type="Area2D" parent="." groups=["zombie"]]
collision_layer = 5
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageLayer"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_cjixw")

[node name="TimerDamage" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fdjp6")

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="TimerColor" type="Timer" parent="."]
wait_time = 0.2

[node name="zombie_die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kb6wl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_piy17")
sprite_frames = SubResource("SpriteFrames_71a48")
animation = &"die"
frame = 6
frame_progress = 0.0918637

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -9.0
offset_top = 10.0
offset_right = 5.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 8
text = "100"

[connection signal="body_entered" from="FindPlayerLayer" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="FindPlayerLayer" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="DamageLayer" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="DamageLayer" to="." method="_on_damage_layer_body_exited"]
[connection signal="timeout" from="TimerDamage" to="." method="_on_timer_damage_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="TimerColor" to="." method="_on_timer_color_timeout"]
[connection signal="finished" from="zombie_die" to="." method="_on_zombie_die_finished"]
